<resources>
	<string name="app_name">TTPay</string>
	<string name="login">登录</string>
	<string name="register">注册</string>
	<string name="login_load">正在登录</string>
	<string name="app_exit">请再按一次退出App</string>
	<string name="increase_add">添加</string>
	<string name="increase_remove">移除</string>
	<string name="toge_com">立即预约</string>
	<string name="toge_end">已结束</string>
	<string name="trand_withdrawal">撤单</string>
	<string name="select_photo">从相册选择</string>
	<string name="navi_assets">资产</string>
	<string name="navi_trand">交易</string>
	<string name="navi_financial">理财</string>
	<string name="navi_toge">众筹</string>
	<string name="navi_mine">我的</string>
	<string name="account_security">账户安全</string>
	<string name="set_login_password">修改登录密码</string>
	<string name="account_verification">账户安全验证</string>
	<string name="invitation_registration">邀请注册</string>
	<string name="language_title">语言</string>
	<string name="invitation_title">邀请注册</string>
	<string name="about_title">关于</string>
	<string name="publish_list_title">发币项目</string>
	<string name="sing_out">退出登录</string>
	<string name="toge_comming_soon">预热中</string>
	<string name="toge_get_on">预约中</string>
	<string name="toge_over">已结束</string>
	<string name="toge_involved">我参与的</string>
	<string name="toge_recording">众筹记录</string>
	<string name="update_email">修改邮箱</string>
	<string name="update_password">修改登录密码</string>
	<string name="update_pay_password">修改支付密码</string>
	<string name="switch_google_verification_on">开启Google验证</string>
	<string name="switch_google_verification_off">关闭Google验证</string>
	<string name="toge_left_title">发币</string>
	<string name="toge_right_title">订单</string>
	<string name="transfer_sxf_hint">TTPay 用户之间转账/收款无需手续费</string>
	<string name="version_upgrade">版本升级</string>
	<string name="downloading_package">正在下载安装包，请稍后</string>
	<string name="the_current_version">当前版本已是最新</string>
	<string name="check_to_new_version">检查到新版本，是否更新？</string>
	<string name="currency">币种</string>
	<string name="balance">余额</string>
	<string name="assets">资产</string>
	<string name="transaction_type">交易类型</string>
	<string name="transaction_time">交易时间</string>
	<string name="transaction_record">交易记录</string>
	<string name="transfer">转账</string>
	<string name="currency_transaction">币币交易</string>
	<string name="buyer">买方</string>
	<string name="purchase_amount">买入金额</string>
	<string name="seller">卖方</string>
	<string name="selling_amount">卖出金额</string>
	<string name="transfer_address">转账地址</string>
	<string name="collection_address">收款地址</string>
	<string name="transfer_amount">转账金额</string>
	<string name="please_enter">请输入搜索关键字</string>
	<string name="blockchain_browser">区块链浏览器</string>
	<string name="enter_public_key">输入公钥/区块高度</string>
	<string name="block_height">区块高度</string>
	<string name="number_of_transactions">交易数量</string>
	<string name="confirm_the_time">确认时间</string>
	<string name="blockchain_information">区块链信息</string>
	<string name="kernel_version">内核版本</string>
	<string name="basic_assets">基础资产</string>
	<string name="latest_time">最新时间</string>
	<string name="block_information">区块信息</string>
	<string name="menu">更多\t></string>
	<string name="block_time">出块时间</string>
	<string name="latest_transaction">最新交易</string>
	<string name="trading_hash">交易 Hash</string>
	<string name="node_list">节点列表</string>
	<string name="node">节点</string>
	<string name="synchronous_height">同步高度</string>
	<string name="node_map">节点分布图</string>
	<string name="block_details">区块详情</string>
	<string name="current_block">当前区块</string>
	<string name="confirmation_number">确认数</string>
	<string name="block_list">区块列表</string>
	<string name="confirmation">个确认</string>
	<string name="trading_information">交易信息</string>
	<string name="the_transaction_amount">交易金额</string>
	<string name="cannot_scan_qr_code">未给予相机权限将无法扫描二维码</string>
	<string name="collection_address_cannot_be_empty">收款地址不能为空</string>
	<string name="transfer_amount_cannot_be_empty">转账金额不能为空</string>
	<string name="greater_than_the_handling_fee">转账金额必须大于手续费</string>
	<string name="invalid_address">无效地址</string>
	<string name="confirm_transfer">确认转账</string>
	<string name="cancel_the_deal">取消交易</string>
	<string name="transfer_load">转账中</string>
	<string name="available">可用</string>
	<string name="insufficient_balance">余额不足</string>
	<string name="successful_operation">操作成功</string>
	<string name="input_address">输入地址</string>
	<string name="enter_the_transfer_amount">输入转账金额</string>
	<string name="transaction_fees">交易手续费</string>
	<string name="reservation">预约</string>
	<string name="exchange_ratio">兑换比例：</string>
	<string name="purchase_limit">限购额：</string>
	<string name="insufficient">不足！</string>
	<string name="exceeded_the_maximum_number">超出最大预约数量！</string>
	<string name="minimum_number">最小预约数量：</string>
	<string name="purchase_quantity_cannot_be_empty">购买数量不可为空</string>
	<string name="confirm_reservation">确认预约</string>
	<string name="total_payment">总计需支付</string>
	<string name="successful_appointment">预约成功</string>
	<string name="failed_appointment">预约失败</string>
	<string name="no_network">无网络连接，请检查网络</string>
	<string name="total_payment_2">总计需支付：</string>
	<string name="enter_the_number">输入预约数量</string>
	<string name="number_of_reservations">预约数量</string>
	<string name="confirm">确认</string>
	<string name="insufficient_permissions">权限不足</string>
	<string name="share_to">分享到：</string>
	<string name="payment_address">付款地址：</string>
	<string name="collection_address_2">收款地址：</string>
	<string name="in_the_collection">收款中</string>
	<string name="load_payment">转账中</string>
	<string name="successful_payment">收款成功</string>
	<string name="successful_transfer">转账成功</string>
	<string name="failed_payment">收款失败</string>
	<string name="failed_transfer">转账失败</string>
	<string name="copied_to_the_clipboard">内容已复制至剪贴板</string>
	<string name="no">无</string>
	<string name="return_">退回</string>
	<string name="failed">失败</string>
	<string name="success">成功</string>
	<string name="expenditure">支出</string>
	<string name="income">收入</string>
	<string name="take_out">取出</string>
	<string name="commission">提成</string>
	<string name="earnings">收益</string>
	<string name="deposit">存入</string>
	<string name="amount">金额：</string>
	<string name="transaction_fees_">交易手续费：</string>
	<string name="trading_hash_">交易哈希：</string>
	<string name="all">全部</string>
	<string name="buy">购买</string>
	<string name="sell">出售</string>
	<string name="sold">售出</string>
	<string name="currency_">发币</string>
	<string name="send_code">发送验证码</string>
	<string name="send_successfully">验证码发送成功</string>
	<string name="in_verification">验证中</string>
	<string name="mailbox_cannot_be_empty">邮箱不可为空</string>
	<string name="not_nullable">不可为空</string>
	<string name="reset_send">重新发送</string>
	<string name="please_wait">请稍后</string>
	<string name="registration_success">注册成功</string>
	<string name="login_password_cannot_be_empty">登录密码不可为空</string>
	<string name="login_password_must_be_8_or_more">登录密码必须在8位以上</string>
	<string name="login_password_cannot_be_a_pure_number">登录密码不可为纯数字</string>
	<string name="payment_password_cannot_be_empty">支付密码不可为空</string>
	<string name="payment_password_must_be_6_digits">支付密码必须为6位</string>
	<string name="msg_title">通知</string>
	<string name="per_user_participation_limit">每用户参与限额</string>
	<string name="remaining_total">剩余总额度</string>
	<string name="cancel_deposit">取消存入</string>
	<string name="deposit_in">存入中</string>
	<string name="deposit_successfully">存入成功</string>
	<string name="connection_timed_out">连接超时</string>
	<string name="deposit_amount_is_not_allowed_to_be_empty">存入金额不许为空</string>
	<string name="day">天</string>
	<string name="expected_annualized_rate_of_return">预期年化收益率</string>
	<string name="financial_cycle">理财周期</string>
	<string name="starting_amount">起投金额</string>
	<string name="product_name">产品名称</string>
	<string name="select_reset_method">选择重置方式</string>
	<string name="mailbox_reset">邮箱重置</string>
	<string name="copy_16_success">16位密钥已复制至剪贴板</string>
	<string name="download_google">是否下载Google验证器</string>
	<string name="downloading_google_load">正在下载Google验证器，请稍后...</string>
	<string name="google_security_verification">Google安全验证</string>
	<string name="please_backup_your_16_digit_key">请备份好16位密钥，如果手机丢失，您可以通过密钥恢复您的谷歌验证。</string>
	<string name="google_hint">使用 Google 验证器扫码上方二维码，如果您无法扫描二维码，可以将16位密钥手动输入到Google验证器中。</string>
	<string name="not_google">我还没有安装 Google 验证器 App</string>
	<string name="next">下一步</string>
	<string name="open">开启</string>
	<string name="shut_down">关闭</string>
	<string name="google_verification">Google安全验证</string>
	<string name="google_verifly">Google验证</string>
	<string name="succeeded">已成功</string>
	<string name="google_verified_login">Google验证登录</string>
	<string name="enter_your_login_password">输入登录密码</string>
	<string name="enter_your_google_code">输入Google验证码</string>
	<string name="confirm_removal">确定移除</string>
	<string name="removed">已取出</string>
	<string name="confirm_removed">确定取出？</string>
	<string name="extracting">正在取出</string>
	<string name="remaining_check_in">剩余签到</string>
	<string name="times">次</string>
	<string name="remaining_financial_period">剩余理财周期</string>
	<string name="position_details">持仓详情</string>
	<string name="annualized_rate_of_return">年化收益率：</string>
	<string name="successfully_removed">取出成功</string>
	<string name="payment_amount">支付金额/预约金额</string>
	<string name="number_of_success">成功数量/预约数量</string>
	<string name="conversion_ratio">兑换比例</string>
	<string name="currency_time">发币时间</string>
	<string name="currency_record">发币记录</string>
	<string name="no_currency_record">暂无发币记录</string>
	<string name="cannot_read_permission">未给予读取权限无法读取相册图片</string>
	<string name="image_error">图片不正确，请重新选择</string>
	<string name="setting_login_password">设置登录密码</string>
	<string name="setting_pay_password">设置支付密码</string>
	<string name="forgot_your_password">忘记登录密码</string>
	<string name="modify_payment_password">修改支付密码</string>
	<string name="forgot_to_pay_the_password">忘记支付密码？</string>
	<string name="enter_the_current_payment_password">输入当前支付密码</string>
	<string name="Enter_a_new_payment_password">输入新支付密码</string>
	<string name="buy_mvc">购买MVC</string>
	<string name="sell_mvc">出售MVC</string>
	<string name="current_price">当前价格</string>
	<string name="h24_highest">24H最高</string>
	<string name="h24_minimum">24H最低</string>
	<string name="mvc_trading">MVC交易</string>
	<string name="buy_mvc_pending_order">购买MVC挂单</string>
	<string name="sell_mvc_pending_order">出售MVC挂单</string>
	<string name="btc_finance">BTC 理财</string>
	<string name="my_position">我的持仓</string>
	<string name="total_wealth_management_assets">理财总资产</string>
	<string name="today_income">今日收益</string>
	<string name="cumulative_income">累计收益</string>
	<string name="offline_time">下线时间</string>
	<string name="need_to_sign_in">需签到</string>
	<string name="product_remaining_amount">产品剩余额度</string>
	<string name="starting">起投</string>
	<string name="total_assets">总资产</string>
	<string name="are_you_sure_you_want_to_log_out_of_ttpay">确定要登出TTPay？</string>
	<string name="the_public_key_has_been_copied_to_the_clipboard">公钥已复制至剪贴板</string>
	<string name="email">邮箱</string>
	<string name="public_key">公钥</string>
	<string name="cancel">取消</string>
	<string name="determine">确定</string>
	<string name="add_currency">添加币种</string>
	<string name="search_currency">搜索币种</string>
	<string name="search_null">没有搜索到相关结果</string>
	<string name="password">密码</string>
	<string name="please_enter_the_email">请输入邮箱验证码</string>
	<string name="forget_password">忘记密码？</string>
	<string name="google_empty">Google验证码不可为空</string>
	<string name="please_contact_email">请联系邮箱</string>
	<string name="login_successful">登录成功</string>
	<string name="lost_google_authenticator">丢失google验证器</string>
	<string name="receipt">收款</string>
	<string name="no_notice">暂无通知</string>
	<string name="participation_details">参与详情</string>
	<string name="daily_release_ratio">每日释放比例</string>
	<string name="no_currency_project">暂无发币项目</string>
</resources>