<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@color/white"
              android:gravity="center_horizontal"
              android:layout_height="match_parent">

	<View
			android:id="@+id/status_bar"
			android:layout_width="match_parent"
			android:layout_height="0dp"/>

	<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:layout_below="@id/status_bar"
			android:background="@color/white">

		<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center"
				android:text="@string/google_security_verification"
				android:textColor="@color/login_content"
				android:textSize="17sp"/>

		<ImageView
				android:id="@+id/google_back"
				android:layout_width="40dp"
				android:onClick="onClick"
				android:layout_height="40dp"
				android:layout_centerVertical="true"
				android:layout_marginLeft="6dp"
				android:scaleType="center"/>
	</RelativeLayout>
	<TextView
			android:text="@string/please_backup_your_16_digit_key"
			android:layout_marginLeft="40dp"
			android:textColor="#F34B4B"
			android:textSize="12sp"
			android:layout_marginTop="24dp"
			android:layout_marginRight="40dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	<ImageView
			android:id="@+id/google_qcode"
			android:layout_marginTop="15dp"
			android:layout_width="135dp"
			android:scaleType="centerCrop"
			android:layout_height="135dp"/>
	<TextView
			android:id="@+id/google_key"
			android:layout_marginLeft="57dp"
			android:textColor="@color/login_content"
			android:background="@drawable/shape_round_gray_5dp"
			android:layout_marginRight="57dp"
			android:layout_width="match_parent"
			android:layout_marginTop="13dp"
			android:onClick="onClick"
			android:gravity="center"
			android:layout_height="46dp"/>
	<TextView
			android:text="@string/google_hint"
			android:layout_marginLeft="40dp"
			android:textColor="#666666"
			android:textSize="12sp"
			android:layout_marginTop="24dp"
			android:layout_marginRight="40dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	<TextView
			android:id="@+id/google_app"
			android:text="@string/not_google"
			android:layout_marginLeft="40dp"
			android:textColor="#6969B8"
			android:textSize="12sp"
			android:onClick="onClick"
			android:padding="10dp"
			android:layout_marginTop="14dp"
			android:layout_marginRight="40dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	<View
			android:layout_width="match_parent"
	      android:layout_height="0dp"
	      android:layout_weight="1"/>

	<TextView
			android:id="@+id/google_next"
			android:layout_width="match_parent"
			android:layout_height="44dp"
			android:layout_marginLeft="44dp"
			android:layout_marginRight="44dp"
			android:layout_marginBottom="60dp"
			android:background="@drawable/bg_his_in"
			android:gravity="center"
			android:textSize="15sp"
			android:onClick="onClick"
			android:text="@string/next"
			android:textColor="@color/white" />
</LinearLayout>