<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_grey"
    android:orientation="vertical">

    <View
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white" />

    <RelativeLayout
        android:id="@+id/about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@id/status_bar"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/account_security"
            android:textColor="@color/login_content"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:onClick="onClick"
            android:scaleType="center"
            android:src="@drawable/back_icon_black" />
    </RelativeLayout>

    <com.allen.library.SuperTextView
        android:id="@+id/update_email"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/ripple_bg"
        android:paddingLeft="15dp"
        android:onClick="onClick"
        app:sDividerLineHeight="1dp"
        app:sLeftTextColor="@color/select_gray"
        app:sLeftTextString="@string/update_email"
        app:sRightIconRes="@drawable/next_icon_black" />

    <com.allen.library.SuperTextView
        android:id="@+id/update_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/ripple_bg"
        android:onClick="onClick"
        android:paddingLeft="15dp"
        app:sDividerLineHeight="1dp"
        app:sLeftTextColor="@color/select_gray"
        app:sLeftTextString="@string/update_password"
        app:sRightIconRes="@drawable/next_icon_black" />

    <com.allen.library.SuperTextView
        android:id="@+id/update_pay_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:onClick="onClick"
        android:background="@drawable/ripple_bg"
        android:paddingLeft="15dp"
        app:sDividerLineHeight="1dp"
        app:sLeftTextColor="@color/select_gray"
        app:sLeftTextString="@string/update_pay_password"
        app:sRightIconRes="@drawable/next_icon_black" />
    <com.allen.library.SuperTextView
            android:id="@+id/switch_google_verification"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:onClick="onClick"
            android:background="@drawable/ripple_bg"
            android:paddingLeft="15dp"
            app:sDividerLineHeight="1dp"
            app:sLeftTextColor="@color/select_gray"
            app:sLeftTextString="@string/switch_google_verification_on"
            app:sRightIconRes="@drawable/next_icon_black" />
</LinearLayout>